# Payment-Gateway-Platform

./: .gitignore  .replit  pyproject.toml  replit.md  requirements.txt
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
adminpanel/: urls.py  views.py
api/: urls.py  views.py
attached_assets/: Pasted-Create-a-production-ready-SaaS-Payment-Gateway-Platform_1770972729688.txt
core/: settings.py  urls.py
dashboard/: views.py
landing/: urls.py  views.py
payments/: models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payment_payment_token.py
sdk/: setup.py
sdk/nexapay/: __init__.py  client.py  utils.py
templates/: base.html
templates/accounts/: login.html  register.html
templates/adminpanel/: dashboard.html  login.html
templates/dashboard/: home.html
templates/landing/: docs.html  home.html  pricing.html
templates/payments/: payment_page.html
