[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.5",
    "dj-database-url>=3.1.0",
    "django>=5.2.11",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.0.3",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "qrcode>=8.2",
    "requests>=2.32.5",
]
